--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_title: "RefuGapp"
 meta_description: "Fill the gap between locals and refugees."
-meta_image: "refuGapp.png" # Une image dans votre dossier app/assets/images/
+meta_image: "colorful_refugapp.png" # Une image dans votre dossier app/assets/images/
 twitter_account: "@GinaaGold"
